--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,15 +52,15 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #ffffff;
   }
 }
 
 body {
-  background: var(--primary);
+  background: var(--background);
   color: var(--foreground);
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
